# swagger.json
@@ -441,10 +441,10 @@
         }
       }
     },
-    "/sort/:boardId/:priority": {
+    "/filter/:boardId/:priority": {
       "get": {
         "tags": ["Boards"],
-        "summary": "Sort cards on the board",
+        "summary": "Filter cards on the board",
         "parameters": [
           {
             "in": "path",
@@ -465,7 +465,7 @@
         "requestBody": {},
         "responses": {
           "200": {
-            "description": "Successful response containing the sorted items",
+            "description": "Successful response containing the filtered items",
             "content": {
               "application/json": {
                 "example": {
@@ -554,9 +554,9 @@
               }
             }
           },
-          "401": {"description": "Unauthorized"},
-          "404": {"description": "Not found"},
-          "500": {"description": "Internal server error"}
+          "401": { "description": "Unauthorized" },
+          "404": { "description": "Not found" },
+          "500": { "description": "Internal server error" }
         }
       },
       "get": {
@@ -565,7 +565,7 @@
         "security": [{ "Bearer": [] }],
         "requestBody": {},
         "responses": {}
-      }      
+      }
     },
     "/column": {
       "put": {
@@ -597,7 +597,7 @@
         "security": [{ "Bearer": [] }],
         "requestBody": {},
         "responses": {}
-      },      
+      },
       "patch": {
         "tags": ["Cards"],
         "summary": "Replace card",
